--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     Cement mortar is used in various proportions, i.e. 1:1, 1:2, 1:3, 1:4, 1:6, 1:8 etc.
             </p>
     </div>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Mortar_mixed_inside_bucket.jpg/220px-Mortar_mixed_inside_bucket.jpg"  id="sand-im-1 "alt="" srcset="">
+    <img src="https://qph.fs.quoracdn.net/main-qimg-21545aa697b32db238619b0de336ae4e"  id="sand-im-1 "alt="" srcset="">
         <img src="http://www.claybrick.org/sites/default/files/styles/large/public/images/cement.jpg?itok=b9QHiHwR" id="sand-im-2" alt="" srcset="">
 </div>
     <div class="rock-stone">
