--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Building Materials</title>
-        <link rel="shortcut icon" href="CIVIL_ENGINEERING.jpg" type="image/x-icon">
+        <link rel="shortcut icon" href="/CIVIL_ENGINEERING.jpg" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
   
     </head>
