--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Building Materials</title>
-        <link rel="shortcut icon" href="/CIVIL_ENGINEERING.jpg" type="image/x-icon">
+        <link rel="shortcut icon" href="https://i.pinimg.com/originals/9f/1a/86/9f1a86a3aab3064768fa2d80bdc8689f.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
   
     </head>
